base templates + header/footer actions

--- a/templates/front/base/index.html.twig
+++ b/templates/front/base/index.html.twig
@@ -1,6 +1,5 @@
 {% extends 'front/layout.html.twig' %}
 
 {% block main %}
-    {{ temp }}
-    {{ 'base.yes'|trans }}
+    {{ portals|length }}
 {% endblock %}
