--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -1,3 +1,6 @@
+{% set route = app.request.attributes.get('_route') %}
+{% set route_params = app.request.attributes.get('_route_params') %}
+
 <!DOCTYPE html>
 <html lang="{{ app.request.locale }}">
     <head>
@@ -7,18 +10,12 @@
         {% endblock %}
         {% block seo %}
             {# TODO: SEO service #}
-            <meta name="keywords" content="{% block keywords %}{{ 'default.keywords'|trans({}, 'seo') }}{% endblock %}">
-            {# TODO: SEO service #}
-            <meta name="description" content="{% block description %}{{ 'default.description'|trans({}, 'seo') }}{% endblock %}">
-            {# TODO: SEO service #}
             <title>{% block title %}{{ 'default.title'|trans({}, 'seo') }}{% endblock %}</title>
+            <meta name="description" content="{% block description %}{{ 'default.description'|trans({}, 'seo') }}{% endblock %}">
+            <meta name="keywords" content="{% block keywords %}{{ 'default.keywords'|trans({}, 'seo') }}{% endblock %}">
         {% endblock %}
-        {% block css %}
-            {% include '_includes/css.html.twig' %}
-        {% endblock %}
-        {% block links %}
-            {% include '_includes/links.html.twig' %}
-        {% endblock %}
+        {% block css %}{% endblock %}
+        {% block links %}{% endblock %}
         {% block window %}
             <script>
                 window.app_locale = "{{ app.request.locale }}";
@@ -28,11 +25,7 @@
 
     <body class="{% block body_class %}{% endblock %}">
         {% block body %}{% endblock %}
-
-        {% block js %}
-            {% include '_includes/js.html.twig' %}
-        {% endblock %}
-
+        {% block js %}{% endblock %}
         {% block modal %}{% endblock %}
     </body>
 </html>
