--- a/templates/front/layout.html.twig
+++ b/templates/front/layout.html.twig
@@ -5,15 +5,29 @@
 {% block body %}
     {% trans_default_domain 'messages' %}
 
-    <header class="{% block header_class %}{% endblock %}">
-        {% block header %}{% endblock %}
-    </header>
+    {{ render(controller('App\\Controller\\CommonController::renderHeader', {
+        'route': route,
+        'routeParams': route_params,
+        'url': app.request.uri
+    })) }}
 
     <main class="{% block main_class %}{% endblock %}">
         {% block main %}{% endblock %}
     </main>
 
-    <footer class="{% block footer_class %}{% endblock %}">
-        {% block footer %}{% endblock %}
-    </footer>
+    {{ render(controller('App\\Controller\\CommonController::renderFooter', {
+        'route': route,
+        'routeParams': route_params,
+        'url': app.request.uri
+    })) }}
+{% endblock %}
+
+{% block css %}
+    {% include 'front/_includes/css.html.twig' %}
+{% endblock %}
+{% block links %}
+    {% include 'front/_includes/links.html.twig' %}
+{% endblock %}
+{% block js %}
+    {% include 'front/_includes/js.html.twig' %}
 {% endblock %}
