--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+/**
+ * @atom Body
+ * @section Global
+ * @description
+ *  Global body height set as 100%.
+ */
 html {
   height: 100%;
 }
