--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -56,87 +56,14 @@ $screen-ipad:    768px;
 $button-hover-rank:  10;
 $button-active-rank: 15;
 
-// =================
-// Admin section
-// =================
+// ==================
+// Homepage section
+// ==================
 
-// Hovers
-$admin--hover-rank-main: 20;
-$admin--hover-rank-sub:  30;
+// ==================
+// Portal section
+// ==================
 
-// Header variables
-$admin--header-height:              52px;
-$admin--header-hover-color:         $color-secondary;
-$admin--header-hover-bg-color-main: lighten($admin--header-hover-color, $admin--hover-rank-main);
-$admin--header-hover-bg-color-sub:  lighten($admin--header-hover-color, $admin--hover-rank-sub);
-
-// Avatar variants
-$admin--avatar-circle-oversize: 150px;
-
-// -----------------
-// Sidebar section
-// -----------------
-
-$admin--sidebar-hide-width: 0;
-$admin--sidebar-width:      250px;
-$admin--sidebar-color:      $color-white; // rgb(255, 255, 255)
-$admin--sidebar-bg-color:   $color-bg; // rgb(101, 115, 131)
-$admin--sidebar-duration:   1s;
-
-// -----------------
-// Header section
-// -----------------
-
-$admin--header-height: 53px;
-$admin--header-color:  $color-white; // rgb(255, 255, 255)
-
-// -----------------
-// Toolbar section
-// -----------------
-
-$admin--toolbar-bg-color:      $color-white; // rgb(255, 255, 255)
-$admin--toolbar-tablet-height: 70px;
-$admin--toolbar-laptop-height: 50px;
-
-// -----------------
-// Footer section
-// -----------------
-
-$admin--footer-height:   300px;
-$admin--footer-color:    $color-white; // rgb(255, 255, 255)
-$admin--footer-bg-color: $color-bg; // rgb(101, 115, 131)
-
-// =================
-// Front section
-// =================
-
-// =================
-// Switcher section
-// =================
-
-// Colors
-$switcher--bg-color:                   $color-primary;
-$switcher--checked-lever-bg-color:     desaturate(lighten($switcher--bg-color, $space-small), $space-small);
-$switcher--unchecked-bg-color:         #F1F1F1;
-$switcher--unchecked-lever-bg-color:   #818181;
-$switcher--input-disabled-solid-color: #BDBDBD;
-
-// =================
-// Logo section
-// =================
-
-$logo--sketch-size: 65px;
-
-// =================
-// Bootstrap section
-// =================
-
-// Prefix
-$bootstrap-prefix: "bs";
-
-// Colors for reset styles
-$bs--color-text:   #55595C; // rgb(85, 89, 92)
-$bs--color-border: #CCC; // rgb(204, 204, 204)
-
-// Variables for reset styles
-$bs--card-header-bg-color: lighten($color-secondary, 30);
+// ==================
+// BackOffice section
+// ==================
