--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /**
- * @atom Body
+ * @structure Body
  * @section Global
  * @description
  *  Global body height set as 100%.
