--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -12,7 +12,7 @@
     {% endblock %}
 
     {% block main %}
-        {{ portals|length }}
+        <h1>{{ 'mainboard content here' }}</h1>
     {% endblock %}
 
     {% block footer %}
