--- a/templates/homepage/_includes/js.html.twig
+++ b/templates/homepage/_includes/js.html.twig
@@ -1,1 +1,2 @@
-{#<script src="{{ asset('web/js/app.js') }}"></script>#}
+<script src="{{ asset('web/js/common.js') }}"></script>
+<script src="{{ asset('web/js/homepage.js') }}"></script>
