--- a/templates/homepage/footer.html.twig
+++ b/templates/homepage/footer.html.twig
@@ -1,3 +1,3 @@
-<footer class="{% block footer_class %}{% endblock %}">
+<footer class="app-homepage__footer">
     <h1>{{ 'footer content here' }}</h1>
 </footer>
