--- a/templates/homepage/header.html.twig
+++ b/templates/homepage/header.html.twig
@@ -1,3 +1,3 @@
-<header class="{% block header_class %}{% endblock %}">
+<header class="app-homepage__header">
     <h1>{{ 'header content here' }}</h1>
 </header>
