--- a/assets/styles/_mixins.scss
+++ b/assets/styles/_mixins.scss
@@ -3,5 +3,7 @@
 // ====================
 // Mixins
 // ====================
-@import "mixins/grid";
+@import "mixins/calc";
 @import "mixins/media";
+@import "mixins/grid";
+@import "mixins/misc";
