--- a/assets/modules/homepage/regions/_header.scss
+++ b/assets/modules/homepage/regions/_header.scss
@@ -9,6 +9,8 @@
  *  Style of header for Homepage.
  * @markup
  *  <header class="app-homepage__header">
+ *   ...
+ *  </header>
  */
 .#{$prefix}-homepage__header {
   color: $color-info
