--- a/assets/modules/homepage/regions/_main.scss
+++ b/assets/modules/homepage/regions/_main.scss
@@ -9,6 +9,8 @@
  *  Style of main for Homepage.</br>
  * @markup
  *  <main class="app-homepage__main">
+ *   ...
+ *  </main>
  */
 .#{$prefix}-homepage__main {
   color: $color-primary
