--- a/assets/modules/homepage/regions/_footer.scss
+++ b/assets/modules/homepage/regions/_footer.scss
@@ -9,6 +9,8 @@
  *  Style of footer for Homepage.
  * @markup
  *  <footer class="app-homepage__footer">
+ *   ...
+ *  </footer>
  */
 .#{$prefix}-homepage__footer {
   color: $color-success
