--- a/assets/styles/_mixins.scss
+++ b/assets/styles/_mixins.scss
@@ -6,4 +6,6 @@
 @import "mixins/calc";
 @import "mixins/media";
 @import "mixins/grid";
+@import "mixins/cross-browsers";
+@import "mixins/absoluts";
 @import "mixins/misc";
