--- a/assets/modules/homepage/regions/_footer.scss
+++ b/assets/modules/homepage/regions/_footer.scss
@@ -8,10 +8,23 @@
  * @description
  *  Style of footer for Homepage.
  * @markup
- *  <footer class="app-homepage__footer">
- *   ...
- *  </footer>
+ *  <footer class="app-homepage__footer"></footer>
  */
 .#{$prefix}-homepage__footer {
-  color: $color-success
+  position: absolute;
+  right:    0;
+  bottom:   0;
+  left:     0;
+
+  background-color: #C3E3B5; // @TODO: debug bg
+
+  &--layout {
+    @include app--box-sizing();
+    @extend .#{$prefix}-bordure;
+    display:   flex;
+    width:     $space-full;
+    max-width: $content-max-width;
+
+    background-color: #5CB860; // @TODO: debug bg
+  }
 }
