--- a/assets/modules/homepage/regions/_header.scss
+++ b/assets/modules/homepage/regions/_header.scss
@@ -8,10 +8,59 @@
  * @description
  *  Style of header for Homepage.
  * @markup
- *  <header class="app-homepage__header">
- *   ...
- *  </header>
+ *  <header class="app-homepage__header"></header>
  */
 .#{$prefix}-homepage__header {
-  color: $color-info
+  @extend .#{$prefix}-nullify;
+  position: relative;
+  z-index:  999;
+
+  background-color: #ABABAB; // @TODO: debug bg
+
+  &--topline {
+    text-align: center;
+
+    background-color: #495C68; // @TODO: debug bg
+  }
+
+  &--layout {
+    @include app--box-sizing();
+    @extend .#{$prefix}-bordure;
+    display:   flex;
+    width:     $space-full;
+    max-width: $content-max-width;
+
+    background-color: #8F8F8F; // @TODO: debug bg
+  }
+
+  &--logo {
+    display:     inline-block;
+    flex-shrink: 0;
+    flex-grow:   0;
+
+    background-color: #F0AD4E; // @TODO: debug bg
+    font-size:        -webkit-xxx-large;
+  }
+
+  &--workspace {
+    display:         flex;
+    flex-direction:  row;
+    justify-content: space-between;
+    flex-grow:       1;
+
+    background-color: #269ABC; // @TODO: debug bg
+  }
+
+  &--quote {
+    max-width: 1000px;
+
+    background-color: #AE81FF; // @TODO: debug bg
+  }
+
+  &--actions {
+    display:        flex;
+    flex-direction: column;
+
+    background-color: #A6E22E; // @TODO: debug bg
+  }
 }
