--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'layout.html.twig' %}
 
-{% block body_class %}{{ 'app-homepage__body' }}{% endblock %}
+{% block body_class %}{{ 'app-homepage-body' }}{% endblock %}
 
 {% block main %}
-    <main class="app-homepage__main">
+    <main class="app-homepage-main">
         <h1>{{ 'mainboard content here' }}</h1>
     </main>
 {% endblock %}
