--- a/assets/modules/homepage/homepage.scss
+++ b/assets/modules/homepage/homepage.scss
@@ -20,6 +20,7 @@
 // ====================
 // Globals
 // ====================
+@import "../../styles/vendors";
 @import "../../styles/global";
 @import "../../styles/normalize";
 
