--- a/templates/components/logo.html.twig
+++ b/templates/components/logo.html.twig
@@ -1,6 +1,6 @@
-<div class="app-homepage__header--logo">
+<div class="app-homepage-header__logo">
     {% if logo.type == constant('App\\Service\\Logotype::TYPE_PHRASE') %}
-        <h1>{{ logo.data }}</h1>
+        <h1 class="app-homepage-header__logo--phrase">{{ logo.data }}</h1>
     {% else %}
         {% set src = logo.type == constant('App\\Service\\Logotype::TYPE_LINK')
             ? logo.data
