--- a/templates/regions/footer.html.twig
+++ b/templates/regions/footer.html.twig
@@ -1,5 +1,5 @@
-<footer class="app-homepage__footer">
-    <section class="app-homepage__footer--layout">
+<footer class="app-homepage-footer">
+    <section class="app-homepage-footer__layout">
         <h1>{{ 'footer content here' }}</h1>
 
     </section>
