--- a/assets/modules/homepage/regions/_header.scss
+++ b/assets/modules/homepage/regions/_header.scss
@@ -34,12 +34,34 @@
   }
 
   &__logo {
-    display:     inline-block;
+    @include app--flex-center();
     flex-shrink: 0;
     flex-grow:   0;
+    width:       250px;
+    height:      135px;
+    cursor:      default;
 
-    background-color: #F0AD4E; // @TODO: debug bg
-    font-size:        -webkit-xxx-large;
+    a {
+      text-decoration: none;
+      cursor:          pointer;
+    }
+
+    &--phrase {
+      @include app--non-select();
+      margin:    0;
+      padding:   5px;
+      font-size: 65px;
+      color:     $color-primary;
+
+      &:hover {
+        color: $color-primary;
+      }
+    }
+
+    &--image {
+      display: block;
+      width:   240px;
+    }
   }
 
   &__workspace {
