style - header (desktop) + buttons

--- a/assets/modules/homepage/homepage.scss
+++ b/assets/modules/homepage/homepage.scss
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 
 // ====================
-// Variables & Mixins
+// Variables & Helpers
 // ====================
 @import "variables";
-@import "mixins";
+@import "helpers";
 
 // ====================
 // Resetting
