--- a/assets/styles/_mixins.scss
+++ b/assets/styles/_mixins.scss
@@ -9,4 +9,5 @@
 @import "mixins/flex";
 @import "mixins/cross-browsers";
 @import "mixins/absoluts";
+@import "mixins/buttons";
 @import "mixins/misc";
